# py-simple-singleton

./: Pipfile  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: release_pypi.yml
simple_singleton/: __init__.py  singleton.py  singleton_args.py  thread_singleton.py
tests/: test_singleton.py  test_singleton_args.py  test_thread_singleton.py
tests/res/: __init__.py  singleton_args_class.py  singleton_class.py
